backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: apptc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
